# diesel-learn

./: .editorconfig  .env  Cargo.toml  README.md  diesel.toml
migrations/2020-03-03-133828_create_posts/: up.sql
migrations/2020-03-04-090155_create_users/: up.sql
src/: lib.rs  models.rs  pagination.rs  predicates.rs  schema.rs
