[package]
name = "diesel-learn"
version = "0.1.0"
authors = ["sunben <sunben.96@bytedance.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# diesel = { version = "1.4", features = ["postgres"] }
diesel = { version = "1.4", features = ["mysql", "r2d2"] }
# diesel = { version = "1.4", features = ["sqlite"] }
dotenv = "0.15.0"